2002-06-14  Richard Williamson  <rjw@apple.com>

    Removed redundant private _isDocumentHTML method.
    
	* WebView.subproj/IFMainURLHandleClient.mm:
	(-[IFMainURLHandleClient IFURLHandle:didRedirectToURL:]):
	* WebView.subproj/IFWebDataSourcePrivate.h:
	* WebView.subproj/IFWebDataSourcePrivate.mm:
	(-[IFWebDataSource _stopLoading]):
	(-[IFWebDataSource _addError:forResource:]):
	* WebView.subproj/IFWebFramePrivate.mm:
	(-[IFWebFrame _isLoadComplete]):

2002-06-14  Richard Williamson  <rjw@apple.com>

    Added handlers to IFWebController.  Should eventually be possible to use
    IFWebController w/o subclassing.
    
    Changed IFResourceProgressHandler to pass back resource handle instead of
    string description.  This will address the needs descibed in 2954160.
    
    Fixed many incorrect references to datasource reps.
    
	* Plugins.subproj/IFNullPluginView.mm:
	(-[IFNullPluginView drawRect:]):
	* Plugins.subproj/IFPluginStream.mm:
	(-[IFPluginStream IFURLHandle:resourceDataDidBecomeAvailable:]):
	(-[IFPluginStream IFURLHandleResourceDidFinishLoading:data:]):
	(-[IFPluginStream IFURLHandleResourceDidCancelLoading:]):
	(-[IFPluginStream IFURLHandle:resourceDidFailLoadingWithResult:]):
	* WebCoreSupport.subproj/IFWebCoreBridge.mm:
	(-[IFWebDataSource _bridge]):
	(-[IFWebCoreBridge createNewFrameNamed:withURL:renderPart:khtml::allowsScrolling:marginWidth:marginHeight:]):
	* WebView.subproj/IFDocument.h:
	* WebView.subproj/IFHTMLRepresentation.h:
	* WebView.subproj/IFHTMLRepresentationPrivate.h:
	* WebView.subproj/IFHTMLView.mm:
	(-[IFHTMLView provisionalDataSourceChanged:]):
	(-[IFHTMLView viewWillStartLiveResize]):
	(-[IFHTMLView viewDidEndLiveResize]):
	* WebView.subproj/IFImageView.m:
	* WebView.subproj/IFMainURLHandleClient.mm:
	(-[IFMainURLHandleClient IFURLHandleResourceDidCancelLoading:]):
	(-[IFMainURLHandleClient IFURLHandleResourceDidFinishLoading:data:]):
	(-[IFMainURLHandleClient IFURLHandle:resourceDataDidBecomeAvailable:]):